# kteach-r

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
crochet-gui/: Cargo.toml
crochet-gui/src/: main.rs  player.rs
examples/: play-pause-midi-no-gui.rs  play-pause-no-gui.rs
iced-gui/: Cargo.toml
iced-gui/src/: main.rs  player.rs
kteach-core/: Cargo.toml
kteach-core/examples/: engine.rs  mixer-engine-no-gui.rs  play-pause-no-gui.rs
kteach-core/examples/gain-engine-no-gui/: Cargo.toml
kteach-core/examples/gain-engine-no-gui/src/: main.rs
kteach-core/src/: decoder.rs  engine.rs  lib.rs  midi.rs  output.rs  player.rs  source.rs  state.rs  state_backup.rs
kteach-core/src/modules/: gain.rs  mixer.rs  mod.rs  player.rs  root.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
