[package]
name = "kteach-core"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
#synthesizer-io-core = {git="https://github.com/raphlinus/synthesizer-io", rev="8bb4f5f5711613d50e673d8e7745b1068fb4089e"}
synthesizer-io-core = {git="https://github.com/raphlinus/synthesizer-io"}
symphonia = {version="0.1.0", features=["mp3", "flac", "wav", "ogg", "pcm"]}
time = "0.1"
midir = "0.7.0"
wmidi = "4.0.1"
# TODO Check also https://crates.io/crates/rbl_circular_buffer
ringbuf = "0.2.2"
